Fix text alignment.

--- a/src/components/pages/Library.module.scss
+++ b/src/components/pages/Library.module.scss
@@ -3,3 +3,7 @@
 .page {
     text-align: right;
 }
+
+.songTableContainer {
+    text-align: center;
+}
